clean/improve wms layer management, add style management