@@ -32,8 +32,7 @@
 
 package com.vividsolutions.jump.workbench.ui.plugin.wms;
 
-import static com.vividsolutions.jump.workbench.ui.plugin.wms.MapLayerWizardPanel.COMMON_SRS_LIST_KEY;
-import static com.vividsolutions.jump.workbench.ui.plugin.wms.MapLayerWizardPanel.FORMAT_LIST_KEY;
+import static com.vividsolutions.jump.workbench.ui.plugin.wms.MapLayerWizardPanel.*;
 import static java.awt.GridBagConstraints.WEST;
 
 import java.awt.GridBagConstraints;
@@ -43,28 +42,34 @@ import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import javax.swing.DefaultComboBoxModel;
-import javax.swing.JComboBox;
-import javax.swing.JLabel;
-import javax.swing.JPanel;
+import javax.swing.*;
 
 import com.vividsolutions.jump.I18N;
 import com.vividsolutions.jump.workbench.ui.InputChangedFirer;
 import com.vividsolutions.jump.workbench.ui.InputChangedListener;
 import com.vividsolutions.jump.workbench.ui.wizard.WizardPanel;
+import com.vividsolutions.wms.MapStyle;
 
 
 public class SRSWizardPanel extends JPanel implements WizardPanel {
+
     public static final String SRS_KEY = "SRS";
-    private InputChangedFirer inputChangedFirer = new InputChangedFirer();
-    private Map dataMap;
-    private GridBagLayout gridBagLayout1 = new GridBagLayout();
-    private JLabel srsLabel = new JLabel();
-    private DefaultComboBoxModel comboBoxModel = new DefaultComboBoxModel();
-    private DefaultComboBoxModel formatBoxModel = new DefaultComboBoxModel();
-    private JComboBox comboBox = new JComboBox();
-    private JLabel formatLabel;
-    private JComboBox formatBox;
+    public static final String FORMAT_KEY = "FORMAT";
+    public static final String STYLE_KEY = "STYLE";
+    public static final String ADDITIONAL_PARAMETERS_KEY = "ADDITIONAL_PARAMETERS";
+
+    private final InputChangedFirer inputChangedFirer = new InputChangedFirer();
+
+    private final DefaultComboBoxModel<String> srsBoxModel = new DefaultComboBoxModel<>();
+    private final DefaultComboBoxModel<String> formatBoxModel = new DefaultComboBoxModel<>();
+    private final DefaultComboBoxModel<MapStyle> styleBoxModel = new DefaultComboBoxModel<>();
+
+    private final JComboBox<String> srsComboBox = new JComboBox<>();
+    private final JComboBox<String> formatComboBox = new JComboBox<>();
+    private final JComboBox<MapStyle> styleComboBox = new JComboBox<>();
+    private final JTextField moreParametersTextField = new JTextField(24);
+
+    private Map<String,Object> dataMap = new HashMap<>();
 
     public SRSWizardPanel() {
         try {
@@ -86,10 +91,17 @@ public class SRSWizardPanel extends JPanel implements WizardPanel {
         return I18N.get("ui.plugin.wms.SRSWizardPanel.the-layers-you-chosen-support-more-than-one-coordinate-reference");
     }
 
-    void jbInit() throws Exception {
-        srsLabel.setText(I18N.get("ui.plugin.wms.SRSWizardPanel.coordinate-reference-system"));
-        formatLabel = new JLabel(I18N.get("ui.plugin.wms.SRSWizardPanel.image-format"));
-        formatBox = new JComboBox();
+    void jbInit() {
+        JLabel srsLabel = new JLabel(I18N.get(
+                "ui.plugin.wms.SRSWizardPanel.coordinate-reference-system"));
+        JLabel formatLabel = new JLabel(I18N.get(
+                "ui.plugin.wms.SRSWizardPanel.image-format"));
+        JLabel styleLabel = new JLabel(I18N.get(
+                "ui.plugin.wms.SRSWizardPanel.style"));
+        JLabel moreParamLabel = new JLabel(I18N.get(
+                "ui.plugin.wms.SRSWizardPanel.more-parameters"));
+        //formatBox = new JComboBox();
+        GridBagLayout gridBagLayout1 = new GridBagLayout();
         this.setLayout(gridBagLayout1);
         GridBagConstraints gb = new GridBagConstraints();
         gb.anchor = WEST;
@@ -98,65 +110,95 @@ public class SRSWizardPanel extends JPanel implements WizardPanel {
         gb.insets = new Insets(5, 5, 5, 5);
         add(srsLabel, gb);
         ++gb.gridx;
-        add(comboBox, gb);
+        add(srsComboBox, gb);
 
         ++gb.gridy;
         gb.gridx = 0;
-
         add(formatLabel, gb);
         ++gb.gridx;
-        add(formatBox, gb);
+        add(formatComboBox, gb);
+
+        ++gb.gridy;
+        gb.gridx = 0;
+        add(styleLabel, gb);
+        ++gb.gridx;
+        add(styleComboBox, gb);
+
+        ++gb.gridy;
+        gb.gridx = 0;
+        add(moreParamLabel, gb);
+        ++gb.gridx;
+        add(moreParametersTextField, gb);
     }
 
     public void exitingToRight() {
-        int index = comboBox.getSelectedIndex();
-        String srsCode = (String) getCommonSrsList().get( index );
+        int index = srsComboBox.getSelectedIndex();
+        String srsCode = getCommonSrsList().get( index );
         dataMap.put( SRS_KEY, srsCode );
-        dataMap.put(URLWizardPanel.FORMAT_KEY, formatBox.getSelectedItem());
+        dataMap.put( FORMAT_KEY, formatComboBox.getSelectedItem());
+        dataMap.put( STYLE_KEY, styleComboBox.getSelectedItem());
+        dataMap.put( ADDITIONAL_PARAMETERS_KEY, moreParametersTextField.getText());
     }
 
-    private static Pattern NB = Pattern.compile("(\\d+)$");
+    private static final Pattern NB = Pattern.compile("^(.*):0*(\\d+)$");
 
-    private static Comparator<String> cleverStringComparator = new Comparator<String>() {
-        @Override
-        public int compare(String o1, String o2) {
-            Matcher m1 = NB.matcher(o1);
-            Matcher m2 = NB.matcher(o2);
-            if (m1.find() && m2.find() && m1.replaceAll("").equals(m2.replaceAll(""))) {
-                m1 = NB.matcher(o1);
-                m2 = NB.matcher(o2);
-                m1.find(); m2.find();
-                return new Integer(m1.group(1).replaceAll("^0+",""))
-                        .compareTo(new Integer(m2.group(1).replaceAll("^0+","")));
-            }
-            else return o1.compareTo(o2);
+    private final static Comparator<String> cleverStringComparator = (o1, o2) -> {
+        Matcher m1 = NB.matcher(o1);
+        Matcher m2 = NB.matcher(o2);
+        if (m1.matches() && m2.matches()
+            && m1.group(1).equals(m2.group(1))) {
+            //m1 = NB.matcher(o1);
+            //m2 = NB.matcher(o2);
+            //m1.find(); m2.find();
+            return Integer.valueOf(m1.group(2)).compareTo(Integer.valueOf(m2.group(2)));
         }
+        else return o1.compareTo(o2);
     };
 
-    private List getCommonSrsList() {
-        List<String> list = (List<String>)dataMap.get(COMMON_SRS_LIST_KEY);
-        Collections.sort(list, cleverStringComparator);
-        return (List) dataMap.get(COMMON_SRS_LIST_KEY);
+
+    private List<String> getCommonSrsList() {
+        @SuppressWarnings("unchecked")
+        List<String> list = (List<String>)dataMap.get(SRS_LIST_KEY);
+        String first = list.isEmpty() ? null : list.get(0);
+        list.sort(cleverStringComparator);
+        // List is sort to ease the search, but first srs kept at first place
+        // as it has more chance to be the desired srs
+        if (first != null) {
+            list.remove(first);
+            list.add(0, first);
+        }
+        return list;
     }
 
 
     public void enteredFromLeft(Map dataMap) {
         this.dataMap = dataMap;
 
-        comboBoxModel.removeAllElements();
-        for (Iterator i = getCommonSrsList().iterator();i.hasNext();) {
-            String srs = (String) i.next();
-            String srsName = SRSUtils.getName( srs );
-            comboBoxModel.addElement( srsName );
+        srsBoxModel.removeAllElements();
+        for (String srs : getCommonSrsList()) {
+            // TODO don't change srs name as it may be used to match the bbox srs name
+            //String srsName = SRSUtils.getName( srs );
+            //srsBoxModel.addElement( srsName );
+            srsBoxModel.addElement(srs);
         }
-        comboBox.setModel(comboBoxModel);
+        srsComboBox.setModel(srsBoxModel);
 
         String[] formats = (String[]) dataMap.get(FORMAT_LIST_KEY);
         formatBoxModel.removeAllElements();
         for (String f : formats) {
             formatBoxModel.addElement(f);
         }
-        formatBox.setModel(formatBoxModel);
+        formatComboBox.setModel(formatBoxModel);
+
+        @SuppressWarnings("unchecked")
+        List<MapStyle> styles = (List<MapStyle>) dataMap.get(STYLE_LIST_KEY);
+        styleBoxModel.removeAllElements();
+        for (MapStyle f : styles) {
+            styleBoxModel.addElement(f);
+        }
+        styleComboBox.setModel(styleBoxModel);
+
+        moreParametersTextField.setText("");
     }
 
     public String getTitle() {
